Added Penang Flavours document

--- a/NoSQL_Analysis/NoSQL_setup.ipynb
+++ b/NoSQL_Analysis/NoSQL_setup.ipynb
@@ -94,57 +94,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'_id': ObjectId('641810df1fa15702ed6105fa'),\n",
-       " 'FHRSID': 254719,\n",
-       " 'ChangesByServerID': 0,\n",
-       " 'LocalAuthorityBusinessID': 'PI/000069980',\n",
-       " 'BusinessName': 'Refreshment Kiosk',\n",
-       " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
-       " 'BusinessTypeID': 1,\n",
-       " 'AddressLine1': 'The Bay',\n",
-       " 'AddressLine2': 'St Margarets Bay',\n",
-       " 'AddressLine3': 'Kent',\n",
-       " 'AddressLine4': '',\n",
-       " 'PostCode': 'CT15 6DY',\n",
-       " 'Phone': '',\n",
-       " 'RatingValue': '5',\n",
-       " 'RatingKey': 'fhrs_5_en-gb',\n",
-       " 'RatingDate': '2022-03-24T00:00:00',\n",
-       " 'LocalAuthorityCode': '182',\n",
-       " 'LocalAuthorityName': 'Dover',\n",
-       " 'LocalAuthorityWebSite': 'http://www.dover.gov.uk/',\n",
-       " 'LocalAuthorityEmailAddress': 'publicprotection@dover.gov.uk',\n",
-       " 'scores': {'Hygiene': 0, 'Structural': 5, 'ConfidenceInManagement': 5},\n",
-       " 'SchemeType': 'FHRS',\n",
-       " 'geocode': {'longitude': '1.387974', 'latitude': '51.152225'},\n",
-       " 'RightToReply': '',\n",
-       " 'Distance': 4587.347174863443,\n",
-       " 'NewRatingPending': False,\n",
-       " 'meta': {'dataSource': None,\n",
-       "  'extractDate': '0001-01-01T00:00:00',\n",
-       "  'itemCount': 0,\n",
-       "  'returncode': None,\n",
-       "  'totalCount': 0,\n",
-       "  'totalPages': 0,\n",
-       "  'pageSize': 0,\n",
-       "  'pageNumber': 0},\n",
-       " 'links': [{'rel': 'self',\n",
-       "   'href': 'https://api.ratings.food.gov.uk/establishments/254719'}]}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'AddressLine1': 'The Bay',\n",
+      " 'AddressLine2': 'St Margarets Bay',\n",
+      " 'AddressLine3': 'Kent',\n",
+      " 'AddressLine4': '',\n",
+      " 'BusinessName': 'Refreshment Kiosk',\n",
+      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      " 'BusinessTypeID': 1,\n",
+      " 'ChangesByServerID': 0,\n",
+      " 'Distance': 4587.347174863443,\n",
+      " 'FHRSID': 254719,\n",
+      " 'LocalAuthorityBusinessID': 'PI/000069980',\n",
+      " 'LocalAuthorityCode': '182',\n",
+      " 'LocalAuthorityEmailAddress': 'publicprotection@dover.gov.uk',\n",
+      " 'LocalAuthorityName': 'Dover',\n",
+      " 'LocalAuthorityWebSite': 'http://www.dover.gov.uk/',\n",
+      " 'NewRatingPending': False,\n",
+      " 'Phone': '',\n",
+      " 'PostCode': 'CT15 6DY',\n",
+      " 'RatingDate': '2022-03-24T00:00:00',\n",
+      " 'RatingKey': 'fhrs_5_en-gb',\n",
+      " 'RatingValue': '5',\n",
+      " 'RightToReply': '',\n",
+      " 'SchemeType': 'FHRS',\n",
+      " '_id': ObjectId('641810df1fa15702ed6105fa'),\n",
+      " 'geocode': {'latitude': '51.152225', 'longitude': '1.387974'},\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/254719',\n",
+      "            'rel': 'self'}],\n",
+      " 'meta': {'dataSource': None,\n",
+      "          'extractDate': '0001-01-01T00:00:00',\n",
+      "          'itemCount': 0,\n",
+      "          'pageNumber': 0,\n",
+      "          'pageSize': 0,\n",
+      "          'returncode': None,\n",
+      "          'totalCount': 0,\n",
+      "          'totalPages': 0},\n",
+      " 'scores': {'ConfidenceInManagement': 5, 'Hygiene': 0, 'Structural': 5}}\n"
+     ]
     }
    ],
    "source": [
-    "establishments.find_one()"
+    "# Review one document in the collection\n",
+    "pprint(establishments.find_one())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 2: Update the Database"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. An exciting new halal restaurant just opened in Greenwich, but hasn't been rated yet. The magazine has asked you to include it in your analysis. Add the following restaurant \"Penang Flavours\" to the database."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a new dictionary for the new restaurant data\n",
+    "penang_dict = {\n",
+    "    \"BusinessName\":\"Penang Flavours\",\n",
+    "    \"BusinessType\":\"Restaurant/Cafe/Canteen\",\n",
+    "    \"BusinessTypeID\":\"\",\n",
+    "    \"AddressLine1\":\"Penang Flavours\",\n",
+    "    \"AddressLine2\":\"146A Plumstead Rd\",\n",
+    "    \"AddressLine3\":\"London\",\n",
+    "    \"AddressLine4\":\"\",\n",
+    "    \"PostCode\":\"SE18 7DY\",\n",
+    "    \"Phone\":\"\",\n",
+    "    \"LocalAuthorityCode\":\"511\",\n",
+    "    \"LocalAuthorityName\":\"Greenwich\",\n",
+    "    \"LocalAuthorityWebSite\":\"http://www.royalgreenwich.gov.uk\",\n",
+    "    \"LocalAuthorityEmailAddress\":\"health@royalgreenwich.gov.uk\",\n",
+    "    \"scores\":{\n",
+    "        \"Hygiene\":\"\",\n",
+    "        \"Structural\":\"\",\n",
+    "        \"ConfidenceInManagement\":\"\"\n",
+    "    },\n",
+    "    \"SchemeType\":\"FHRS\",\n",
+    "    \"geocode\":{\n",
+    "        \"longitude\":\"0.08384000\",\n",
+    "        \"latitude\":\"51.49014200\"\n",
+    "    },\n",
+    "    \"RightToReply\":\"\",\n",
+    "    \"Distance\":4623.9723280747176,\n",
+    "    \"NewRatingPending\":True\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Insert the new restaurant into the collection\n",
+    "establishments.insert_one(penang_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'AddressLine1': 'Penang Flavours',\n",
+      " 'AddressLine2': '146A Plumstead Rd',\n",
+      " 'AddressLine3': 'London',\n",
+      " 'AddressLine4': '',\n",
+      " 'BusinessName': 'Penang Flavours',\n",
+      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      " 'BusinessTypeID': '',\n",
+      " 'Distance': 4623.972328074718,\n",
+      " 'LocalAuthorityCode': '511',\n",
+      " 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
+      " 'LocalAuthorityName': 'Greenwich',\n",
+      " 'LocalAuthorityWebSite': 'http://www.royalgreenwich.gov.uk',\n",
+      " 'NewRatingPending': True,\n",
+      " 'Phone': '',\n",
+      " 'PostCode': 'SE18 7DY',\n",
+      " 'RightToReply': '',\n",
+      " 'SchemeType': 'FHRS',\n",
+      " '_id': ObjectId('641a241549aeff78ee0d6006'),\n",
+      " 'geocode': {'latitude': '51.49014200', 'longitude': '0.08384000'},\n",
+      " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check that the new restaurant was inserted into the collection\n",
+    "pprint(establishments.find_one({\"BusinessName\":\"Penang Flavours\"}))"
    ]
   }
  ],
