Deleted establishments in Dover from the database

--- a/NoSQL_Analysis/NoSQL_setup.ipynb
+++ b/NoSQL_Analysis/NoSQL_setup.ipynb
@@ -244,6 +244,224 @@
     "# Check that the new restaurant was inserted into the collection\n",
     "pprint(establishments.find_one({\"BusinessName\":\"Penang Flavours\"}))"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Find the BusinessTypeID for \"Restaurant/Cafe/Canteen\" and return only the `BusinessTypeID` and `BusinessType` fields."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      "  'BusinessTypeID': 1,\n",
+      "  '_id': ObjectId('641810df1fa15702ed6105fa')},\n",
+      " {'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      "  'BusinessTypeID': 1,\n",
+      "  '_id': ObjectId('641810df1fa15702ed6105fc')},\n",
+      " {'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      "  'BusinessTypeID': 1,\n",
+      "  '_id': ObjectId('641810df1fa15702ed6105fd')},\n",
+      " {'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      "  'BusinessTypeID': 1,\n",
+      "  '_id': ObjectId('641810df1fa15702ed6105fe')},\n",
+      " {'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      "  'BusinessTypeID': 1,\n",
+      "  '_id': ObjectId('641810df1fa15702ed610601')}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find the BusinesTypeID for the \"Restaurant/Cafe/Canteen\" and return only the BusinessTypeID and the BusinessType fields\n",
+    "query = {'BusinessType': 'Restaurant/Cafe/Canteen'}\n",
+    "filter = {'BusinessTypeID': 1, 'BusinessType': 1}\n",
+    "\n",
+    "# Print results to see what businestypeID the new document should be\n",
+    "pprint(list(establishments.find(query, filter).limit(5)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x7fd3e31b2c30>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Update the new restaurant with the correct BusinessTypeID\n",
+    "establishments.update_one({'BusinessName':'Penang Flavours'}, \n",
+    "                          {'$set' : {'BusinessTypeID': 1}})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'AddressLine1': 'Penang Flavours',\n",
+      " 'AddressLine2': '146A Plumstead Rd',\n",
+      " 'AddressLine3': 'London',\n",
+      " 'AddressLine4': '',\n",
+      " 'BusinessName': 'Penang Flavours',\n",
+      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      " 'BusinessTypeID': 1,\n",
+      " 'Distance': 4623.972328074718,\n",
+      " 'LocalAuthorityCode': '511',\n",
+      " 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
+      " 'LocalAuthorityName': 'Greenwich',\n",
+      " 'LocalAuthorityWebSite': 'http://www.royalgreenwich.gov.uk',\n",
+      " 'NewRatingPending': True,\n",
+      " 'Phone': '',\n",
+      " 'PostCode': 'SE18 7DY',\n",
+      " 'RightToReply': '',\n",
+      " 'SchemeType': 'FHRS',\n",
+      " '_id': ObjectId('641a241549aeff78ee0d6006'),\n",
+      " 'geocode': {'latitude': '51.49014200', 'longitude': '0.08384000'},\n",
+      " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Confirm that the new restaurant was updated\n",
+    "pprint(establishments.find_one({'BusinessName': 'Penang Flavours'}))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. The magazine is not interested in any establishments in Dover, so check how many documents contain the Dover Local Authority. Then, remove any establishments within the Dover Local Authority from the database, and check the number of documents to ensure they were deleted."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find how many documents have LocalAuthorityName as \"Dover\"\n",
+    "dover_query = {'LocalAuthorityName': 'Dover'}\n",
+    "dover_authority = establishments.count_documents(dover_query)\n",
+    "\n",
+    "print(f'There are {dover_authority} establishments in this dataset in Dover.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.DeleteResult at 0x7fd3e3702870>"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Delete all documents where LocalAuthorityName is Dover\n",
+    "establishments.delete_many(dover_query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 0 establishments in Dover.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check if any remaining documents include Dover\n",
+    "dover_authority = establishments.count_documents(dover_query)\n",
+    "\n",
+    "print(f'There are {dover_authority} establishments in Dover.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'AddressLine1': 'Wear Bay Road',\n",
+      " 'AddressLine2': 'Folkestone',\n",
+      " 'AddressLine3': 'Kent',\n",
+      " 'AddressLine4': '',\n",
+      " 'BusinessName': 'Wear Bay Bowls Club',\n",
+      " 'BusinessType': 'Pub/bar/nightclub',\n",
+      " 'BusinessTypeID': 7843,\n",
+      " 'ChangesByServerID': 0,\n",
+      " 'Distance': 4591.821311183521,\n",
+      " 'FHRSID': 647177,\n",
+      " 'LocalAuthorityBusinessID': 'PI/000041489',\n",
+      " 'LocalAuthorityCode': '188',\n",
+      " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
+      " 'LocalAuthorityName': 'Folkestone and Hythe',\n",
+      " 'LocalAuthorityWebSite': 'http://www.folkestone-hythe.gov.uk',\n",
+      " 'NewRatingPending': False,\n",
+      " 'Phone': '',\n",
+      " 'PostCode': 'CT19 6PY',\n",
+      " 'RatingDate': '2014-03-31T00:00:00',\n",
+      " 'RatingKey': 'fhrs_4_en-gb',\n",
+      " 'RatingValue': '4',\n",
+      " 'RightToReply': '',\n",
+      " 'SchemeType': 'FHRS',\n",
+      " '_id': ObjectId('641810df1fa15702ed6108df'),\n",
+      " 'geocode': {'latitude': '51.086058', 'longitude': '1.196408'},\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/647177',\n",
+      "            'rel': 'self'}],\n",
+      " 'meta': {'dataSource': None,\n",
+      "          'extractDate': '0001-01-01T00:00:00',\n",
+      "          'itemCount': 0,\n",
+      "          'pageNumber': 0,\n",
+      "          'pageSize': 0,\n",
+      "          'returncode': None,\n",
+      "          'totalCount': 0,\n",
+      "          'totalPages': 0},\n",
+      " 'scores': {'ConfidenceInManagement': 10, 'Hygiene': 5, 'Structural': 5}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check that other documents remain\n",
+    "pprint(establishments.find_one())"
+   ]
   }
  ],
  "metadata": {
