Changed the latitude and longtitude datatypes from str to deicmals

--- a/NoSQL_Analysis/NoSQL_setup.ipynb
+++ b/NoSQL_Analysis/NoSQL_setup.ipynb
@@ -366,7 +366,7 @@
     "dover_query = {'LocalAuthorityName': 'Dover'}\n",
     "dover_authority = establishments.count_documents(dover_query)\n",
     "\n",
-    "print(f'There are {dover_authority} establishments in this dataset in Dover.')"
+    "print(f'There are {dover_authority} establishments in Dover in the database.')"
    ]
   },
   {
@@ -407,7 +407,7 @@
     "# Check if any remaining documents include Dover\n",
     "dover_authority = establishments.count_documents(dover_query)\n",
     "\n",
-    "print(f'There are {dover_authority} establishments in Dover.')"
+    "print(f'There are {dover_authority} establishments in Dover in the database.')"
    ]
   },
   {
@@ -461,6 +461,83 @@
    "source": [
     "# Check that other documents remain\n",
     "pprint(establishments.find_one())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. Some of the number values are stored as strings, when they should be stored as numbers. Use `update_many` to convert `latitude` and `longitude` to decimal numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The datatype for latitude is <class 'str'>.\n",
+      "The datatype for longitude is <class 'str'>.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check what the datatype of longitude is\n",
+    "doc = establishments.find_one()\n",
+    "geocode = doc['geocode']\n",
+    "\n",
+    "print(f\"The datatype for latitude is {type(geocode['latitude'])}.\")\n",
+    "print(f\"The datatype for longitude is {type(geocode['longitude'])}.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x7fd3e1676280>"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Change the datatype from str to decimal\n",
+    "establishments.update_many({},\n",
+    "                           [{'$set': {'geocode.latitude': {'$toDecimal': '$geocode.latitude'},\n",
+    "                                      'geocode.longitude': {'$toDecimal': '$geocode.longitude'}}}])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The datatype for latitude is <class 'bson.decimal128.Decimal128'>.\n",
+      "The datatype for longitude is <class 'bson.decimal128.Decimal128'>.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check that the coordinates are now decimal datatypes\n",
+    "doc = establishments.find_one()\n",
+    "geocode = doc['geocode']\n",
+    "\n",
+    "print(f\"The datatype for latitude is {type(geocode['latitude'])}.\")\n",
+    "print(f\"The datatype for longitude is {type(geocode['longitude'])}.\")"
    ]
   }
  ],
