--- a/NoSQL_Analysis/NoSQL_analysis.ipynb
+++ b/NoSQL_Analysis/NoSQL_analysis.ipynb
@@ -1207,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1230,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -4461,20 +4461,21 @@
     }
    ],
    "source": [
-    "# Search within 0.01 degree on either side of the latitude and longitude.\n",
-    "# Rating value must equal 5\n",
-    "# Sort by hygiene score\n",
-    "\n",
+    "# Set the search to be within 0.01 of the latitude and longitude of Penang Flavours\n",
     "degree_search = 0.01\n",
     "latitude = 51.49014200\n",
     "longitude = 0.08384000\n",
     "\n",
+    "# To find nearby restaurants, search within 0.01 degree on either side of the latitude and longitude.\n",
+    "# Rating value must equal 5, \n",
     "query = {'RatingValue': '5',\n",
     "         'geocode.latitude': {'$lte': latitude+degree_search, '$gte': latitude-degree_search}, \n",
     "         'geocode.longitude': {'$lte': longitude+degree_search, '$gte': longitude-degree_search}}\n",
+    "\n",
+    "# Sort by hygiene score\n",
     "sort =  [('scores.Hygiene', -1)]\n",
     "\n",
-    "# Print the results\n",
+    "# Run and save the query to a variable to pprint\n",
     "nearest_restaurants_results = list(establishments.find(query).sort(sort))\n",
     "\n",
     "pprint(nearest_restaurants_results)\n"
@@ -4482,7 +4483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -4729,7 +4730,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4743,6 +4744,198 @@
     "\n",
     "# Display the first 5 rows of the DataFrame\n",
     "nearest_restaurants_df.head(5)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. How many establishments in each Local Authority area have a hygiene score of 0?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Match establishments with a hygiene score of 0\n",
+    "match_query =  {'$match': {'scores.Hygiene': 0}}\n",
+    "\n",
+    "# Group the matches by Local Authority\n",
+    "group_query = {'$group': {'_id': '$LocalAuthorityName', 'count': { '$sum': 1 }}}\n",
+    "\n",
+    "# Sort the matches from highest to lowest\n",
+    "sort_values = {'$sort': {'count': -1}}\n",
+    "\n",
+    "# Create pipeline\n",
+    "pipeline = [match_query, group_query, sort_values]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run the pipeline through the aggregate method and save the results as a list to a variable\n",
+    "hygiene_0_results = list(establishments.aggregate(pipeline))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of Local Authorities in the result: 55.\n",
+      "Here is a preview of the first 10 documents:\n",
+      "[{'_id': 'Thanet', 'count': 1130},\n",
+      " {'_id': 'Greenwich', 'count': 882},\n",
+      " {'_id': 'Maidstone', 'count': 713},\n",
+      " {'_id': 'Newham', 'count': 711},\n",
+      " {'_id': 'Swale', 'count': 686},\n",
+      " {'_id': 'Chelmsford', 'count': 680},\n",
+      " {'_id': 'Medway', 'count': 672},\n",
+      " {'_id': 'Bexley', 'count': 607},\n",
+      " {'_id': 'Southend-On-Sea', 'count': 586},\n",
+      " {'_id': 'Tendring', 'count': 542}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print the number of documents in the result\n",
+    "print(f'Number of Local Authorities in the result: {len(hygiene_0_results)}.')\n",
+    "print('Here is a preview of the first 10 documents:')\n",
+    "\n",
+    "# Print the first 10 results\n",
+    "pprint(hygiene_0_results[:10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 55 rows in the DataFrame.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>_id</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Thanet</td>\n",
+       "      <td>1130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Greenwich</td>\n",
+       "      <td>882</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Maidstone</td>\n",
+       "      <td>713</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Newham</td>\n",
+       "      <td>711</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Swale</td>\n",
+       "      <td>686</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Chelmsford</td>\n",
+       "      <td>680</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Medway</td>\n",
+       "      <td>672</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Bexley</td>\n",
+       "      <td>607</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Southend-On-Sea</td>\n",
+       "      <td>586</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Tendring</td>\n",
+       "      <td>542</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               _id  count\n",
+       "0           Thanet   1130\n",
+       "1        Greenwich    882\n",
+       "2        Maidstone    713\n",
+       "3           Newham    711\n",
+       "4            Swale    686\n",
+       "5       Chelmsford    680\n",
+       "6           Medway    672\n",
+       "7           Bexley    607\n",
+       "8  Southend-On-Sea    586\n",
+       "9         Tendring    542"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Convert the result to a Pandas DataFrame\n",
+    "hygiene_0_df = pd.DataFrame.from_records(hygiene_0_results)\n",
+    "\n",
+    "# Display the number of rows in the DataFrame\n",
+    "print(f'There are {len(hygiene_0_df)} rows in the DataFrame.')\n",
+    "\n",
+    "# Display the first 10 rows of the DataFrame\n",
+    "hygiene_0_df.head(10)"
    ]
   }
  ],
